--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -49,7 +49,7 @@ meta_common_description: "Your meta description."
 # comment to remove any contact item
 contacts:
   - github: "HeoJinuk"
-  #- email: ""
+  - email: "boan3693@gmail.com"
   #- linkedin: ""
   #- twitter: ""
   #- instagram: ""
